--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,9 +1,9 @@
 <form action="/auth/login" method="POST">
-  <label for="auth-email">Email</label>
-  <input id="auth-email" type="email" name="email">
+    <label for="auth-username">Username</label>
+    <input id="auth-username" type="text" name="username">
 
-  <label for="auth-password">Password</label>
-  <input id="auth-password" type="password" name="password">
+    <label for="auth-password">Password</label>
+    <input id="auth-password" type="password" name="password">
 
-  <input type="submit" value="Log In">
+    <input type="submit" value="Log In">
 </form>
