--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,9 +1,9 @@
 <form action="/auth/login" method="POST">
     <label for="auth-username">Username</label>
-    <input id="auth-username" type="text" name="username">
+    <input id="auth-username" type="text" name="username" required>
 
     <label for="auth-password">Password</label>
-    <input id="auth-password" type="password" name="password">
+    <input id="auth-password" type="password" name="password" required>
 
     <input type="submit" value="Log In">
 </form>
