--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,25 +5,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Authentication</title>
+    <!-- Materialize CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
     <link rel="stylesheet" href="/css/style.css">
+
 </head>
 
 <body>
     <header>
         <%- include('partials/alerts') %>
             <nav>
-                <ul>
-                    <% if (!currentUser) { %>
-                        <li><a href="/auth/signup">Signup</a></li>
-                        <li><a href="/auth/login">Login</a></li>
-                        <% } else { %>
-                            <li><a href="/auth/logout">Logout</a></li>
-                            <% } %>
-                </ul>
+                <div class="nav-wrapper">
+                    <a class="brand-logo">Tracker App</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <% if (!currentUser) { %>
+                            <li><a class="modal-trigger" href="#signup">Signup</a> </li>
+                            <li><a class="modal-trigger" href="#login">Login</a></li>
+                            <% } else { %>
+                                <a href="/auth/logout">Logout</a>
+                                <% } %>
+                    </ul>
+                </div>
             </nav>
     </header>
-    <h1>Authentication</h1>
     <%- body %>
+        <!-- Materialize JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script src="/js/app.js" type='text/javascript'></script>
 </body>
 
 </html>
