--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,21 +18,29 @@
             <nav>
                 <div class="nav-wrapper">
                     <a class="brand-logo">Tracker App</a>
-                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <ul id="nav-mobile" class="right">
                         <% if (!currentUser) { %>
                             <li><a class="modal-trigger" href="#signup">Signup</a> </li>
                             <li><a class="modal-trigger" href="#login">Login</a></li>
                             <% } else { %>
-                                <a href="/auth/logout">Logout</a>
+                                <li>
+                                    <a href="#" data-target="slide-out" class="sidenav-trigger">Menu</a>
+                                </li>
+                                <li>
+                                    <a href="/auth/logout">Logout</a>
+                                </li>
                                 <% } %>
                     </ul>
                 </div>
             </nav>
     </header>
-    <%- body %>
-        <!-- Materialize JavaScript -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script src="/js/app.js" type='text/javascript'></script>
+    <% if (currentUser) { %>
+        <%- include('partials/sidenav') %>
+            <% } %>
+                <%- body %>
+                    <!-- Materialize JavaScript -->
+                    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+                    <script src="/js/app.js" type='text/javascript'></script>
 </body>
 
 </html>
