--- a/views/userHome.ejs
+++ b/views/userHome.ejs
@@ -1,3 +1,5 @@
-<h2>Profile Page</h2>
+<main>
+    <h2>Profile Page</h2>
 
-<h3>Welcome to your PROFILE</h3>
+    <h3>Welcome to your PROFILE</h3>
+</main>
