Add icons tp calendar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,7 @@ main.userhome {
     align-items: flex-start;
     justify-content: flex-start;
     padding-left: 350px;
+    padding-right: 50px;
     overflow-y: scroll;
 }
 
@@ -55,14 +56,22 @@ div.calendar {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     gap: 1rem;
+    margin: 0 auto;
 }
 
 div.day {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     background-color: white;
     border-radius: 12px;
+    padding: 5px;
+    width: 9vw;
     height: 10vh;
+}
+
+div.day i {
+    align-self: flex-end;
 }
 
 div.day input#selectDay {
