--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,6 +38,7 @@
         <%- include('partials/sidenav') %>
             <% } %>
                 <%- body %>
+                    <script src="https://kit.fontawesome.com/3c951815da.js" crossorigin="anonymous"></script>
                     <!-- Materialize JavaScript -->
                     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
                     <script src="/js/app.js" type='text/javascript'></script>
