--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -43,15 +43,16 @@
                                                                 <%#  <a href="javascript:{}" onclick="document.getElementById('day ').submit();return false;">%>
                                                                     <div class="day">
                                                                         <input id="selectDay" type="submit" value='<%= day.day%>'>
-                                                                        <p>
-                                                                            <%= day.notes %>
-                                                                        </p>
-                                                                        <p>
-                                                                            <%= day.symptoms %>
-                                                                        </p>
-                                                                        <p>
-                                                                            <%= day.period %>
-                                                                        </p>
+                                                                        <% if (day.notes.length > 0){ %>
+                                                                            <i class="far fa-sticky-note"></i>
+                                                                            <% } %>
+                                                                                <% if  (day.symptoms.length > 0){ %>
+                                                                                    <i class="fas fa-angle-double-up"></i>
+                                                                                    <% } %>
+                                                                                        <% if (day.period) { %>
+                                                                                            <i class="far fa-moon"></i>
+                                                                                            <% } %>
+
                                                                     </div>
                                                                     </input>
                                                             </form>
