--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,7 +24,7 @@
                             <li><a class="modal-trigger" href="#login">Login</a></li>
                             <% } else { %>
                                 <li>
-                                    <a href="#" data-target="slide-out" class="sidenav-trigger">Menu</a>
+                                    <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
                                 </li>
                                 <li>
                                     <a href="/auth/logout">Logout</a>
