--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -36,7 +36,7 @@
                                                 <% }) %>
                                                     <div class="calendar">
                                                         <% monthData.forEach(day => { %>
-                                                            <form id='day<%= day.day %>' action="/user/<%= month %>/<%=day.day %>">
+                                                            <form id='day<%= day.day %>' action="/user/<%= month %>/<%=day.day %>" method="POST">
                                                                 <input type="hidden" name="notes" value="<%=day.notes%>">
                                                                 <input type="hidden" name="symptoms" value="<%=day.symptoms%>">
                                                                 <input type="hidden" name="period" value="<%=day.period%>">
@@ -44,13 +44,13 @@
                                                                     <div class="day">
                                                                         <input id="selectDay" type="submit" value='<%= day.day%>'>
                                                                         <% if (day.notes.length > 0){ %>
-                                                                            <i class="far fa-sticky-note"></i>
+                                                                            <i class="far fa-sticky-note fa-lg"></i>
                                                                             <% } %>
                                                                                 <% if  (day.symptoms.length > 0){ %>
-                                                                                    <i class="fas fa-angle-double-up"></i>
+                                                                                    <i class="fas fa-angle-double-up fa-lg"></i>
                                                                                     <% } %>
                                                                                         <% if (day.period) { %>
-                                                                                            <i class="far fa-moon"></i>
+                                                                                            <i class="far fa-moon fa-lg"></i>
                                                                                             <% } %>
 
                                                                     </div>
