--- a/views/user/showDay.ejs
+++ b/views/user/showDay.ejs
@@ -1,4 +1,6 @@
-<p>
-    hello
-    <%= currentUser.name %>
-</p>
+<main>
+    <p>
+        hello
+        <%= currentUser.name %>
+    </p>
+</main>
