--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,34 +14,35 @@
 
 <body>
     <header>
-        <%- include('partials/alerts') %>
-            <nav>
-                <div class="nav-wrapper">
-                    <a class="brand-logo">Tracker App</a>
-                    <ul id="nav-mobile" class="right">
-                        <% if (!currentUser) { %>
-                            <li><a class="modal-trigger" href="#signup">Signup</a> </li>
-                            <li><a class="modal-trigger" href="#login">Login</a></li>
-                            <% } else { %>
-                                <li>
-                                    <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
-                                </li>
-                                <li>
-                                    <a href="/auth/logout">Logout</a>
-                                </li>
-                                <% } %>
-                    </ul>
-                </div>
-            </nav>
+
+        <nav>
+            <div class="nav-wrapper">
+                <a href='/' class="brand-logo">Tracker App</a>
+                <ul id="nav-mobile" class="right">
+                    <% if (!currentUser) { %>
+                        <li><a class="modal-trigger" href="#signup">Signup</a> </li>
+                        <li><a class="modal-trigger" href="#login">Login</a></li>
+                        <% } else { %>
+                            <li>
+                                <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
+                            </li>
+                            <li>
+                                <a href="/auth/logout">Logout</a>
+                            </li>
+                            <% } %>
+                </ul>
+            </div>
+        </nav>
     </header>
     <% if (currentUser) { %>
         <%- include('partials/sidenav') %>
             <% } %>
-                <%- body %>
-                    <script src="https://kit.fontawesome.com/3c951815da.js" crossorigin="anonymous"></script>
-                    <!-- Materialize JavaScript -->
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-                    <script src="/js/app.js" type='text/javascript'></script>
+                <%- include('partials/alerts') %>
+                    <%- body %>
+                        <script src="https://kit.fontawesome.com/3c951815da.js" crossorigin="anonymous"></script>
+                        <!-- Materialize JavaScript -->
+                        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+                        <script src="/js/app.js" type='text/javascript'></script>
 </body>
 
 </html>
