--- a/views/partials/alerts.ejs
+++ b/views/partials/alerts.ejs
@@ -1,15 +1,7 @@
 <% if (alerts.error) { %>
     <% alerts.error.forEach(msg => { %>
-        <%= msg %>
-            <% }) %>
-                <% } %>
-
-                    <!--
-                    <% if (alerts.success) { %>
-                        <% alerts.success.forEach(msg => { %>
-                            <div class="alert alert-success">
-                                <%= msg %>
-                            </div>
-                            <% }) %>
-                                <% } %>
-                                -->
+        <div class="alerts">
+            <%= msg %>
+        </div>
+        <% }) %>
+            <% } %>
