Add day navigation

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,6 +87,7 @@ div.alerts {
 }
 
 div.calendar {
+    margin-top: 10px;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     gap: 1rem;
@@ -103,22 +104,33 @@ div.day {
     height: 10vh;
 }
 
+main.userhome i {
+    color: black
+}
+
+div.arrows i {
+    padding: 10px;
+}
+
 div.day i {
     align-self: flex-end;
 }
 
-div.day input#selectDay {
+div.day button#selectDay {
     align-self: flex-start;
     border: unset;
     background-color: transparent;
     font-size: 20px;
 }
 
-div.day input#selectDay:focus {
+div.day button#selectDay:focus {
     outline: none;
 }
 
-div.day input#selectDay:hover {
+div.day button#selectDay:hover,
+div.day:hover button#selectDay,
+div.day:hover i,
+div.arrows i:hover {
     color: turquoise;
     cursor: pointer;
 }
