--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -4,7 +4,7 @@
             <%= currentUser.dataValues.username %>
         </h4>
     </li>
-    <li><a class="tooltipped" data-position="right" data-tooltip="Montly Overview" href="#!">Calendar</a></li>
-    <li><a class="tooltipped" data-position="right" data-tooltip="Data Summary" href="#!">Overview</a></li>
-    <li><a class="tooltipped" data-position="right" data-tooltip="Symptom Checker" href="#!">Advice</a></li>
+    <li><a class="tooltipped" data-position="right" data-tooltip="Montly Overview" href="/user">Calendar</a></li>
+    <li><a class="tooltipped" data-position="right" data-tooltip="Data Summary" href="/user/summary">Overview</a></li>
+    <li><a class="tooltipped" data-position="right" data-tooltip="Symptom Checker" href="/advice">Advice</a></li>
 </ul>
