--- a/views/user/showDay.ejs
+++ b/views/user/showDay.ejs
@@ -1,4 +1,16 @@
-<p>
-    hello
-    <%= currentUser.name %>
-</p>
+<main>
+    <div class="arrows">
+        <a href="/user/<%= month.num %>/<%= day.previousDay %>"><i class="fas fa-chevron-left"></i></a><span><a href="/user/<%= month.num %>/<%= day.nextDay %>"><i class="fas fa-chevron-right"></i></a></span>
+    </div>
+    <h2>
+        <%= month.name %>
+            <%= day.num %>
+    </h2>
+    <p>
+        hello
+        <%= currentUser.name %>
+    </p>
+    <div class="arrows">
+        <a href="/user/<%= month.num %>"><i class="fas fa-chevron-left"></i>Back to <%= month.name %></a>
+    </div>
+</main>
