--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,8 @@ main {
     width: 100vw;
 }
 
-main.userhome {
+main.userhome,
+main.showDay {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
@@ -104,8 +105,17 @@ div.day {
     height: 10vh;
 }
 
-main.userhome i {
+main.userhome i,
+main.showDay i,
+main.showDay a {
     color: black
+}
+
+div#dayNav {
+    display: flex;
+    width: calc(100vw - 400px);
+    flex-direction: row-reverse;
+    justify-content: space-between;
 }
 
 div.arrows i {
@@ -130,7 +140,8 @@ div.day button#selectDay:focus {
 div.day button#selectDay:hover,
 div.day:hover button#selectDay,
 div.day:hover i,
-div.arrows i:hover {
+div.arrows a:hover,
+div.arrows a:hover i {
     color: turquoise;
     cursor: pointer;
 }
@@ -140,8 +151,12 @@ div.arrows i:hover {
         height: 100vh;
         top: 0;
     }
-    main.userhome {
+    main.userhome,
+    main.showDay {
         padding-left: 50px;
+    }
+    div#dayNav {
+        width: calc(100vw - 100px);
     }
 }
 
