--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -46,9 +46,12 @@
                                                                     <% if  (day.symptoms.length > 0){ %>
                                                                         <i class="fas fa-angle-double-up fa-lg"></i>
                                                                         <% } %>
-                                                                            <% if (day.period) { %>
-                                                                                <i class="far fa-moon fa-lg"></i>
+                                                                            <% if  (day.activities.length > 0){ %>
+                                                                                <i class="far fa-star fa-lg"></i>
                                                                                 <% } %>
+                                                                                    <% if (day.period) { %>
+                                                                                        <i class="far fa-moon fa-lg"></i>
+                                                                                        <% } %>
                                                         </div>
                                                     </a>
                                                     <% }) %>
