--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,6 +127,10 @@ div.day i {
     align-self: flex-end;
 }
 
+a#newNote i {
+    color: rgba(0, 0, 0, 0.603);
+}
+
 div.day button#selectDay {
     align-self: flex-start;
     border: unset;
@@ -145,6 +149,35 @@ div.arrows a:hover,
 div.arrows a:hover i {
     color: turquoise;
     cursor: pointer;
+}
+
+div.row {
+    width: 100%;
+}
+
+div.card {
+    height: 30vh;
+    overflow-y: scroll;
+}
+
+.card-title {
+    width: 100%;
+}
+
+.card-title span {
+    float: right;
+}
+
+hr {
+    width: 100%;
+}
+
+h4#notes {
+    width: 100%;
+}
+
+h4#notes span {
+    float: right;
 }
 
 @media (max-width: 985px) {
