--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,13 +151,15 @@ div.arrows a:hover i {
     cursor: pointer;
 }
 
-div.row {
+div.row,
+section {
     width: 100%;
 }
 
 div.card {
     height: 30vh;
     overflow-y: scroll;
+    border-radius: 12px;
 }
 
 .card-title {
@@ -170,6 +172,8 @@ div.card {
 
 hr {
     width: 100%;
+    border: 1px solid rgb(158, 212, 199);
+    margin-bottom: 10px;
 }
 
 h4#notes {
@@ -178,6 +182,19 @@ h4#notes {
 
 h4#notes span {
     float: right;
+}
+
+h4#notes span i,
+a.new i {
+    color: rgb(158, 212, 199);
+}
+
+i.filled {
+    color: rgb(158, 212, 199);
+}
+
+i.empty {
+    color: lightgray;
 }
 
 @media (max-width: 985px) {
