--- a/views/user/newDay.ejs
+++ b/views/user/newDay.ejs
@@ -1,6 +1,6 @@
 <main class="new">
     <h2>Edit:
-        <%= month.num%>
+        <%= month.name%>
             <%=day.num%>
     </h2>
     <h5>Add details to today:</h5>
@@ -8,7 +8,7 @@
     <ul class="collapsible expandable">
         <li>
             <h4 class='note collapsible-header'><span><i class="far fa-sticky-note fa-lg"></i></span> Notes: </h4>
-            <form class="collapsible-body" action="/<%=month.num%>/<%=day.num%>/note" method="POST">
+            <form class="collapsible-body" action="/user/<%=month.num%>/<%=day.num%>/note" method="POST">
                 <div class="input-field">
                     <label for="title">Title</label>
                     <input type="text" name="title" id="title" required>
@@ -26,7 +26,7 @@
         </li>
         <li>
             <h4 class='note collapsible-header'><span><i class="fas fa-angle-double-up fa-lg"></i></span> Symptoms: </h4>
-            <form id='symptoms' class="collapsible-body" action="/<%=month.num%>/<%=day.num%>/symptom" method="POST">
+            <form id='symptoms' class="collapsible-body" action="/user/<%=month.num%>/<%=day.num%>/symptom" method="POST">
                 <div class="input-field">
                     <label for="type">Type</label>
                     <input type="text" name="type" id="type" required>
@@ -47,7 +47,7 @@
         <li>
             <h4 class='note collapsible-header'><span><i class=
                 "far fa-star fa-lg"></i></span> Sexual Activity: </h4>
-            <form class="collapsible-body" action="/<%=month.num%>/<%=day.num%>/activity" method="POST">
+            <form class="collapsible-body" action="/user/<%=month.num%>/<%=day.num%>/activity" method="POST">
                 <div class="input-field">
                     <select id='protection' name="protection" required>
                         <option value="" disabled selected>Choose your primary method</option>
